// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Anandamide Integration Test parses anandamide 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "20": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Anandamide Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'N', 'C', 'C', 'O'], [null, null, null, null, null, '=', null, null, '=', null, null, '=', null, null, '=', null, null, null, null, null, null, null, null]);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(20, v2);"
`;

exports[`2-Arachidonoylglycerol Integration Test parses 2-arachidonoylglycerol 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "O",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "20": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
    "22": [
      {
        "atoms": [
          "C",
          "O",
        ],
        "attachments": {},
        "bonds": [
          null,
          null,
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`2-Arachidonoylglycerol Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'O', 'C', 'C', 'O'], [null, null, null, null, null, '=', null, null, '=', null, null, '=', null, null, '=', null, null, null, null, null, null, null, null]);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(20, v2);
export const v4 = Linear(['C', 'O']);
export const v5 = v3.attach(22, v4);"
`;

exports[`THC Integration Test parses THC 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "11": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            "=",
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 14,
          "substitutions": {
            "12": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`THC Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 14, bonds: ['=', null, '=', null, null, '=', null, null, null, null, null, null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3] });
export const v3 = v2.substitute(12, 'O');
export const v4 = Linear(['C']);
export const v5 = v3.attach(11, v4, { sibling: true });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3, branchDepths: [1, 1, 2, 2, 3, 3], leadingBond: '=' });
export const v7 = v6.substitute(5, 'O');
export const v8 = Linear(['C']);
export const v9 = v7.attach(4, v8, { sibling: true });
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 4, bonds: [null, '=', null, null, null, null], branchDepths: [1, 1, 1, 2, 2, 2] });
export const v11 = FusedRing([v5, v9, v10], { metadata: { ringMetadata: [{ positions: [5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18], start: 5, end: 18 }, { positions: [8, 9, 14, 15, 16, 17], start: 8, end: 17 }, { positions: [9, 10, 11, 12, 13, 14], start: 9, end: 14 }], allPositions: [5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 20, 21], branchDepthMap: new Map([[5, 0], [6, 0], [7, 0], [8, 1], [9, 1], [10, 1], [11, 1], [12, 2], [13, 2], [14, 2], [15, 2], [16, 3], [17, 3], [18, 3], [20, 2], [21, 1]]), atomValueMap: new Map([[5, 'C'], [6, 'C'], [7, 'C'], [8, 'C'], [9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'C'], [15, 'C'], [16, 'O'], [17, 'C'], [18, 'C'], [20, 'C'], [21, 'C']]), bondMap: new Map([[6, '='], [8, '='], [11, '='], [18, '=']]), ringOrderMap: new Map([[5, [1, 1]], [6, [1]], [7, [1]], [8, [2, 2, 1]], [9, [3, 3, 2, 1]], [10, [3, 1]], [11, [3, 1]], [12, [3, 1]], [13, [3, 1]], [14, [3, 2, 1]], [15, [2, 1]], [16, [2, 1]], [17, [2, 1]], [18, [1]]]) } });
export const v12 = Linear(['O']);
export const v13 = Molecule([v1, v11, v12]);"
`;

exports[`CBD Integration Test parses CBD 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {
        "3": [
          {
            "components": [
              {
                "atoms": "C",
                "attachments": {
                  "3": [
                    {
                      "atoms": [
                        "C",
                        "C",
                      ],
                      "attachments": {
                        "1": [
                          {
                            "atoms": [
                              "C",
                            ],
                            "attachments": {},
                            "bonds": [
                              "=",
                            ],
                            "type": "linear",
                          },
                        ],
                      },
                      "bonds": [
                        null,
                        null,
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  "=",
                  null,
                  null,
                  null,
                  null,
                ],
                "offset": 0,
                "ringNumber": 2,
                "size": 6,
                "substitutions": {},
                "type": "ring",
              },
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [],
                "type": "linear",
              },
            ],
            "type": "molecule",
          },
        ],
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`CBD Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 1, 2, 3] });
export const v3 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: [null, '=', null, null, null, null], branchDepths: [1, 1, 1, 2, 2, 2] });
export const v4 = Linear(['C', 'C']);
export const v5 = Linear(['C'], ['=']);
export const v6 = v4.attach(1, v5);
export const v7 = v3.attach(3, v6, { sibling: false });
export const v8 = Linear(['C']);
export const v9 = Molecule([v7, v8]);
export const v10 = v2.attach(3, v9, { sibling: false });
export const v11 = Linear(['O']);
export const v12 = v10.attach(4, v11, { sibling: false });
export const v13 = Linear(['O']);
export const v14 = Molecule([v1, v12, v13]);"
`;

exports[`Nabilone Integration Test parses nabilone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "7": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "11": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "7": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 14,
          "substitutions": {
            "12": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Nabilone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(7, v2);
export const v4 = Linear(['C']);
export const v5 = v3.attach(7, v4);
export const v6 = Ring({ atoms: 'C', size: 14, bonds: ['=', null, '=', null, null, null, null, null, null, null, null, null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2] });
export const v7 = v6.substitute(12, 'O');
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(7, v8, { sibling: true });
export const v10 = Linear(['C']);
export const v11 = v9.attach(11, v10, { sibling: true });
export const v12 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3, branchDepths: [1, 1, 1, 1, 2, 2], leadingBond: '=' });
export const v13 = v12.substitute(5, 'O');
export const v14 = Linear(['C']);
export const v15 = v13.attach(4, v14, { sibling: true });
export const v16 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 4 });
export const v17 = Linear(['O'], ['=']);
export const v18 = v16.attach(3, v17);
export const v19 = FusedRing([v11, v15, v18], { metadata: { ringMetadata: [{ positions: [9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23], start: 9, end: 23 }, { positions: [12, 13, 19, 20, 21, 22], start: 12, end: 22 }, { positions: [13, 14, 15, 17, 18, 19], start: 13, end: 19 }], allPositions: [9, 10, 11, 12, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 25], branchDepthMap: new Map([[9, 0], [10, 0], [11, 0], [12, 1], [13, 1], [14, 1], [15, 1], [17, 1], [18, 1], [19, 1], [20, 1], [21, 2], [22, 2], [23, 2], [25, 1]]), atomValueMap: new Map([[9, 'C'], [10, 'C'], [11, 'C'], [12, 'C'], [13, 'C'], [14, 'C'], [15, 'C'], [17, 'C'], [18, 'C'], [19, 'C'], [20, 'C'], [21, 'O'], [22, 'C'], [23, 'C'], [25, 'C']]), bondMap: new Map([[10, '='], [12, '='], [23, '=']]), ringOrderMap: new Map([[9, [1, 1]], [10, [1]], [11, [1]], [12, [2, 2, 1]], [13, [3, 3, 2, 1]], [14, [3, 1]], [15, [3, 1]], [17, [3, 1]], [18, [3, 1]], [19, [3, 2, 1]], [20, [2, 1]], [21, [2, 1]], [22, [2, 1]], [23, [1]]]) } });
export const v20 = Linear(['O']);
export const v21 = Molecule([v5, v19, v20]);"
`;

exports[`Palmitoylethanolamide Integration Test parses palmitoylethanolamide 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "16": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Palmitoylethanolamide Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'N', 'C', 'C', 'O']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(16, v2);"
`;
